--- a/client/app.wxss
+++ b/client/app.wxss
@@ -10,3 +10,18 @@
     width: 650rpx;
     margin: auto;
 }
+
+.btn_lang {
+    background-color: #f54203;
+    border-radius: 0rpx;
+    height: 73rpx;
+    line-height: 73rpx;
+    font-size: 26rpx;
+    margin: 15rpx 0;
+    color: #fff;
+    text-align: center;
+}
+.error{
+    color: #ff0000;
+    font-size: 24rpx;
+}
