--- a/client/pages/designer/designer.wxml
+++ b/client/pages/designer/designer.wxml
@@ -1,3 +1,3 @@
 <search bindsearch="search"></search>
 <!-- 导航 -->
-<navCategory data-page-type="designerSelect"></navCategory>
+<navCategory tiemTxt="{{tiemTxt}}" pageType="{{pageType}}"></navCategory>
