--- a/client/component/navCategory/navCategory.wxml
+++ b/client/component/navCategory/navCategory.wxml
@@ -1,6 +1,6 @@
 <view class="select">
     <block wx:for="{{categoryList}}" wx:if="{{index < 5}}" wx:key="{{item.id}}">
-        <navigator open-type="navigate" url="/pages/classList/classList?type={{item.type}}&pageType={{pageType}}" class="item-select">
+        <navigator open-type="navigate" url="/pages/classList/classList?type={{item.type}}&listName={{item.listName}}&pageType={{pageType}}" class="item-select">
                 <view class="title">
                     <text>{{item.title}}   {{pageType}}{{time}}</text>
                 </view>
