--- a/client/pages/classList/classList.wxml
+++ b/client/pages/classList/classList.wxml
@@ -1,6 +1,6 @@
 <view class="main">
-<view class="item-list" bindtap="getNum" data-key='0' data-title="{{title}}" ><text>全部</text></view>
+<view class="item-list" bindtap="getNum" data-key='-1' data-title="{{title}}" ><text>全部</text></view>
 <block wx:for="{{classList}}" wx:key="{{index}}">
-    <view class="item-list" bindtap="getNum" data-key="{{item.id}}" data-title="{{item.name}}"><text>{{item.name}}</text></view>
+    <view class="item-list" bindtap="setNum" data-key="{{item.id}}" data-title="{{item.name}}"><text>{{item.name}}</text></view>
 </block>
 </view>
